[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webhook-replay-cli"
version = "0.1.0"
description = "Python CLI for replaying failed webhook events with operational safety."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Bas Mulder", email = "mulder2222@hotmail.com" }
]

[project.scripts]
webhook-replay = "webhook_replay_cli.cli:main"
